--- a/angular-book-ui/src/app/book-table/book-table.component.html
+++ b/angular-book-ui/src/app/book-table/book-table.component.html
@@ -1,31 +1,26 @@
-
 <table class="table table-striped">
-	<thead>
-		<tr>
-			<th scope="col">#</th>
-			<th scope="col">Country</th>
-			<th scope="col">Area</th>
-			<th scope="col">Population</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr *ngFor="let country of countries">
-			<th scope="row">{{ country.id }}</th>
-			<td>
-				<img
-					[src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag"
-					class="me-2"
-					style="width: 20px"
-				/>
-				{{ country.name }}
-			</td>
-			<td>{{ country.area | number}}</td>
-			<td>{{ country.population | number }}</td>
-		</tr>
-	</tbody>
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Title</th>
+            <th scope="col">Author</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let book of books">
+            <th scope="row">{{ book.id }}</th>
+            <td>
+                {{ book.title }}
+            </td>
+            <td>{{ book.author }}</td>
+            <!-- <td>{{ country.population | number }}</td> -->
+        </tr>
+    </tbody>
 </table>
 
-<div class="d-flex justify-content-between p-2">
+
+
+<!-- <div class="d-flex justify-content-between p-2">
 	<ngb-pagination
 		[collectionSize]="collectionSize"
 		[(page)]="page"
@@ -34,9 +29,9 @@
 	>
 	</ngb-pagination>
 
-	<select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshCountries()">
+ <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshCountries()">
 		<option [ngValue]="2">2 items per page</option>
 		<option [ngValue]="4">4 items per page</option>
 		<option [ngValue]="6">6 items per page</option>
-	</select>
-</div>
+	</select> 
+</div> -->
