--- a/angular-book-ui/src/app/book-table/book-table.component.html
+++ b/angular-book-ui/src/app/book-table/book-table.component.html
@@ -20,18 +20,18 @@
 
 
 
-<!-- <div class="d-flex justify-content-between p-2">
+<div class="d-flex justify-content-between p-2">
 	<ngb-pagination
 		[collectionSize]="collectionSize"
 		[(page)]="page"
 		[pageSize]="pageSize"
-		(pageChange)="refreshCountries()"
+		(pageChange)="refreshTable()"
 	>
 	</ngb-pagination>
 
- <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshCountries()">
+ <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshTable()">
 		<option [ngValue]="2">2 items per page</option>
 		<option [ngValue]="4">4 items per page</option>
 		<option [ngValue]="6">6 items per page</option>
 	</select> 
-</div> -->
+</div>
