--- a/angular-book-ui/src/app/book-table/book-table.component.html
+++ b/angular-book-ui/src/app/book-table/book-table.component.html
@@ -1,36 +1,34 @@
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Title</th>
-            <th scope="col">Author</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let book of books">
-            <th scope="row">{{ book.id }}</th>
-            <td>
-                {{ book.title }}
-            </td>
-            <td>{{ book.author }}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="book-table">
+    <button class="btn btn-outline-primary mb-2 me-2" (click)="addBook()">Add Book</button>
 
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let book of books">
+                <th scope="row">{{ book.id }}</th>
+                <td>
+                    {{ book.title }}
+                </td>
+                <td>{{ book.author }}</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <div class="d-flex justify-content-between p-2">
+        <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize"
+            (pageChange)="refreshTable()">
+        </ngb-pagination>
 
-<div class="d-flex justify-content-between p-2">
-	<ngb-pagination
-		[collectionSize]="collectionSize"
-		[(page)]="page"
-		[pageSize]="pageSize"
-		(pageChange)="refreshTable()"
-	>
-	</ngb-pagination>
-
- <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshTable()">
-		<option [ngValue]="2">2 items per page</option>
-		<option [ngValue]="4">4 items per page</option>
-		<option [ngValue]="6">6 items per page</option>
-	</select> 
+        <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshTable()">
+            <option [ngValue]="2">2 items per page</option>
+            <option [ngValue]="4">4 items per page</option>
+            <option [ngValue]="6">6 items per page</option>
+        </select>
+    </div>
 </div>
