--- a/angular-book-ui/src/app/book-table/book-table.component.html
+++ b/angular-book-ui/src/app/book-table/book-table.component.html
@@ -7,6 +7,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Title</th>
                 <th scope="col">Author</th>
+                <th scope="col">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -16,6 +17,8 @@
                     {{ book.title }}
                 </td>
                 <td>{{ book.author }}</td>
+                <td>{{ book.author }}</td>
+
             </tr>
         </tbody>
     </table>
