--- a/angular-book-ui/src/app/book-table/book-table.component.html
+++ b/angular-book-ui/src/app/book-table/book-table.component.html
@@ -4,7 +4,6 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th scope="col">#</th>
                 <th scope="col">Title</th>
                 <th scope="col">Author</th>
                 <th scope="col">Actions</th>
@@ -12,10 +11,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let book of books">
-                <th scope="row">{{ book.id }}</th>
-                <td>
-                    {{ book.title }}
-                </td>
+                <th scope="row">{{ book.title }}</th>
                 <td>{{ book.author }}</td>
                 <td >
                     <svg xmlns="http://www.w3.org/2000/svg" 
@@ -36,25 +32,26 @@
                         fill="currentColor" 
                         class="bi bi-trash" 
                         viewBox="0 0 16 16"
-                        (click)="deleteBook()">
+                        (click)="deleteBook(book.id)">
                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
                         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
                       </svg>
                 </td>
-
             </tr>
         </tbody>
     </table>
 
     <div class="d-flex justify-content-between p-2">
-        <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize"
+        <ngb-pagination [collectionSize]="collectionSize" 
+            [(page)]="page" 
+            [pageSize]="pageSize"
             (pageChange)="refreshTable()">
         </ngb-pagination>
 
         <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshTable()">
-            <option [ngValue]="2">2 items per page</option>
-            <option [ngValue]="4">4 items per page</option>
-            <option [ngValue]="6">6 items per page</option>
+            <option [ngValue]="2">2</option>
+            <option [ngValue]="4">4</option>
+            <option [ngValue]="6">6</option>
         </select>
     </div>
 </div>
