--- a/angular-book-ui/src/app/book-table/book-table.component.html
+++ b/angular-book-ui/src/app/book-table/book-table.component.html
@@ -1,7 +1,7 @@
-<div class="book-table">
+<div class="mx-3 book-table">
     <button class="btn btn-outline-primary mb-2 me-2" (click)="addBook()">Add Book</button>
 
-    <table class="table table-striped">
+    <table class="table table-striped px-2">
         <thead>
             <tr>
                 <th scope="col">Title</th>
