Made a simple readme

--- a/angular-book-ui/src/app/book-table/book-table.component.html
+++ b/angular-book-ui/src/app/book-table/book-table.component.html
@@ -45,6 +45,7 @@
         <ngb-pagination [collectionSize]="collectionSize" 
             [(page)]="page" 
             [pageSize]="pageSize"
+            [collectionSize]="books.length"
             (pageChange)="refreshTable()">
         </ngb-pagination>
 
