--- a/angular-book-ui/src/app/book-modal/book-modal.component.html
+++ b/angular-book-ui/src/app/book-modal/book-modal.component.html
@@ -7,5 +7,5 @@
         <label for="author">Author</label>
         <input type="author" class="form-control" id="author" placeholder="Frank Herbert" formControlName="author">
     </div>
-    <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+    <button type="submit" class="btn btn-primary form-group" (click)="onSubmit()">Submit</button>
 </form>
